--- a/style.css
+++ b/style.css
@@ -2,28 +2,24 @@
 
 * {
     box-sizing: border-box;
-    transition: all 0.5s ease-out;
+    transition: all 0.8s ease-out;
 }
 
-    body {
+body {
     background-color: black;
     color: white;
     display: flex;
     justify-content: center;
 }
 
-.netflixsvg {
-    width: 50vw;
-    padding: 50px;
-}
-
 h1 {
     display: flex;
     justify-content: center;
     color: red;
-    font-size: 150px;
+    font-size: 160px;
     text-align: center;
     font-family: 'DM Sans', sans-serif;
+
 
 }
 
@@ -46,22 +42,16 @@ h1 {
     overflow: auto;
 
 }
-
-.serie-img {
-    border-radius: 3px;
-}
-
+.btn-orderByBest,
 .btn-orderTitle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-
-    border-radius: 7px;
-    width: 75px;
-    height: 75px;
-
-    padding: 10px;
+    border-radius: 10px;
+    width: 90px;
+    height: 90px;
+    padding: 20px;
     font-family: 'DM Sans', sans-serif;
 }
 
@@ -73,9 +63,9 @@ h1 {
 
 .serie-title {
     font-weight: bold;
-    font-size: 30px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    font-size: 40px;
+    margin-top: 18px;
+    margin-bottom: 18px;
 
 }
 
@@ -84,8 +74,7 @@ h1 {
     border: solid 1px white;
     max-width: max-content;
     background-color: black;
-    font-size: 20px;
-    margin: 7px;
+    font-size: 30px;
+    margin: 10px;
     border-radius: 20px;
-
 }
