--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 * {
     box-sizing: border-box;
@@ -10,6 +11,7 @@ body {
     color: white;
     display: flex;
     justify-content: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 h1 {
@@ -18,14 +20,14 @@ h1 {
     color: red;
     font-size: 160px;
     text-align: center;
-    font-family: 'DM Sans', sans-serif;
-
-
+    font-family: 'Bebas Neue', cursive;
 }
 
 .div-order-btn {
     display: flex;
     justify-content: center;
+    padding: 10px 10px 10px 10px;
+
 }
 
 .serie-li {
@@ -39,8 +41,8 @@ h1 {
     padding: 20px;
     margin: 10px;
     overflow: auto;
-
 }
+
 .btn-orderByBest,
 .btn-orderTitle {
     display: flex;
@@ -51,7 +53,9 @@ h1 {
     width: 90px;
     height: 90px;
     padding: 20px;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .class-collectioUl {
@@ -70,14 +74,11 @@ h1 {
     font-size: 40px;
     margin-top: 18px;
     margin-bottom: 18px;
-
 }
 
 .serie-upVotes-btn,
 .serie-downVotes-btn {
-    border: solid 1px white;
-    max-width: max-content;
-    background-color: black;
+    background-color: white;
     font-size: 30px;
     margin: 10px;
     border-radius: 20px;
