--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1 {
     overflow: auto;
 }
 
+.btn-orderByWorst,
 .btn-orderByBest,
 .btn-orderTitle {
     display: flex;
@@ -75,6 +76,7 @@ h1 {
     margin-top: 18px;
     margin-bottom: 18px;
 }
+
 
 .serie-upVotes-btn,
 .serie-downVotes-btn {
